--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,8 @@
 Brotli==1.0.9
 click==8.0.3
 dash==2.15.0
-dash-core-components==2.0.2
-dash-html-components==2.0.2
+#dash-core-components==2.0.2
+#dash-html-components==2.0.2
 plotly==5.3.1
 Flask==2.0.2
 itsdangerous==1.1.0
