--- a/requirements.txt
+++ b/requirements.txt
@@ -7,12 +7,12 @@ dash==2.15.0
 plotly==5.3.1
 Flask==2.0.2
 itsdangerous==1.1.0
-Jinja2==2.11.3
+Jinja2
 MarkupSafe==1.1.1
 plotly==5.3.1
 six==1.15.0
 tenacity==8.0.1
-Werkzeug>2.0
+Werkzeug
 
 
 # Used for my app
