--- a/requirements.txt
+++ b/requirements.txt
@@ -11,8 +11,8 @@ Werkzeug>2.2.2
 
 
 # Used for my app
-#pandas==1.2.4
-#scipy>1.6.1
+pandas>1.2.4
+scipy>1.6.1
 #sentence_transformers==2.3.1
 #umap-learn==0.5.5
 #scikit-learn
