--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ pandas>1.2.4
 scipy>1.6.1
 #sentence_transformers==2.3.1
 #umap-learn==0.5.5
-#scikit-learn
+scikit-learn
 
 # For Heroku
 gunicorn==20.1.0
